--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
     max-width: 960px;
     margin: 0 auto;
     padding: 20px;
+    text-align: center;
 }
 
 footer {
@@ -26,8 +27,8 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    
 }
-
 
 
 
