--- a/style.css
+++ b/style.css
@@ -92,27 +92,33 @@ li {
 .menu-items {
     position: absolute;
     top: 0;
-    left: 0;
+    left:-10px;
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
     background: #fff;
     max-width: 400px;
-    width: 90%;
-    height: 100vh;
-    overflow: scroll;
+    width: 40%;
+    height: auto;
+    /*overflow: scroll;*/
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
+    opacity: 0.5;
 
 }
 .menu-item{
     padding: 0 15px;
+
 }
 
 .menu{
     display: flex;
     justify-content: center;
+}
+.menu-items li:first-child{
+    margin-top: 40px;
+  
 }
 
 
@@ -137,8 +143,9 @@ li {
 
 @media (max-width: 750px) and (max-height: 883px) {
     .menu-items li {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         font-size: 1.5rem;
+        margin-left: 1rem;
     }
 
     .hamburger input[type="checkbox"]:checked ~ .menu-items {
