--- a/style.css
+++ b/style.css
@@ -66,20 +66,26 @@ footer {
 /*inlinkd*/
 .container-sm a:nth-child(1):hover{
     opacity: 1;
+    /*
     background: #1877F2;
     transform: translateY(-6px) scale(1.2);
+    */
 }
 /*facebok*/
 .container-sm a:nth-child(2):hover{
     opacity: 1;
+    /*
     background: #1877F2;
     transform: translateY(-6px) scale(1.2);
+    */
 }
 /*instgram*/
 .container-sm a:nth-child(3):hover{
     opacity: 1;
+    /* 
     background: rgb(255,0,172);
     background: linear-gradient(222deg, rgba(255,0,172,1) 0%, rgba(252,176,69,1) 100%);
+    */
     transform: translateY(-6px) scale(1.2);
 }
 
