--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    position: static;
 }
 
 .container {
-    max-width: 960px;
+    max-width: auto;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
@@ -35,6 +36,169 @@ footer {
     text-align: center;
     position: static;
 }
+
+
+/* till furmularen*/
+.hero{
+    width: 100%;
+    height: 130%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+form{
+   background-image:linear-gradient(rgba(0,0,0,0.4), #3551b5);
+   background-position: center;
+   background-size: cover;
+   min-width: 300px;   
+   max-width: 100%;
+   padding-top: 5%;
+   padding: 2%;
+   padding-right: 2%;
+   
+}
+
+
+.input-group{
+    margin-top: 15px;
+    margin-bottom: 30px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+   
+}
+input, textarea{
+    width: auto;
+    padding: 5px;
+    outline: 0;
+    border: 1px solid #fff;
+    color: #fff;
+    background: transparent;
+    font-size: 18px; 
+}
+
+textarea{
+    min-height: 100px;
+    max-height: 300px;
+    max-width: 300px;
+    min-width: 300px;
+
+    
+}
+ 
+
+
+label{
+    height: 100%;
+    position: absolute;
+    left: 3px;
+    top: 5px;
+    padding: 0px;
+    color:#fff;
+    cursor: text;
+    transition: 0.2s;
+    font-size: 24px;
+}
+textarea:focus~label,
+textarea:valid~label {
+    
+    top: -25px;
+    font-size: 24px;
+}
+label i{ color:white} 
+/*
+.fas{   
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 25px;
+    color:#fff;
+    cursor: text;
+    transition: 0.2s;
+}
+
+textarea:focus~.fas,
+textarea:valid~.fas {
+    
+    top: -25px;
+    font-size: 24px;
+}
+*/
+button{
+    padding: 10px 0;
+    color: #fff;
+    outline: none;
+    background: transparent;
+    border: 1px solid #fff;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 5%;
+}
+
+
+
+input:focus~label,
+input:valid~label{
+    top: -25px;
+    font-size: 24px;
+}
+
+.fas{
+    bottom: -20px;
+}
+/*
+.rad{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.rad .input-group{
+    flex-basis: 48%;
+}
+*/
+
+
+  
+.text-container {
+    background-color: rgba(192, 231, 243, 0.219); 
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    font-size: 20px;
+}
+
+
+
+
+
+
+
+/* här är för bilden i startsidn*/
+.image-centered {
+    display: block;
+    margin: 0 auto;
+    width: 300;
+    height: 500px;
+}
+/* här är för texten udnder bilden*/
+.text-container {
+    background-color: rgba(192, 231, 243, 0.219); 
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    font-size: 20px;
+}
+
 
 
 /*----------- BAR SOCIAL -----------*/
