--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ sticky då är den kvar där man har ställt den och om den hamnar på överst e
 
 
 body {
+    background-color: #87CEEB;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -12,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #666666;
     color: #fff;
     padding: 10px;
     position: fixed;
@@ -29,13 +30,15 @@ header {
 }
 
 footer {
-    background-color: #333;
+    background-color: #666666;
     color: #fff;
     bottom: 0;
     width: 100%;
     text-align: center;
     position: static;
 }
+
+
 
 
 /* till furmularen*/
@@ -149,6 +152,7 @@ input:valid~label{
 
 .fas{
     bottom: -20px;
+    color: #1877F2;
 }
 /*
 .rad{
@@ -173,7 +177,14 @@ input:valid~label{
     text-align: center;
     font-size: 20px;
 }
+/* Ändra färgen på icon bilden här */
+.input-group label img {
+    filter: invert(100%) hue-rotate(180deg);
+    margin-top: -2px;
+    max-width: 50px;
+    max-height: 50px;
 
+  } 
 
 
 
@@ -186,6 +197,7 @@ input:valid~label{
     margin: 0 auto;
     width: 300;
     height: 500px;
+    border: 3px solid black;
 }
 /* här är för texten udnder bilden*/
 .text-container {
